--- a/MI203_amani_version_finale.ipynb
+++ b/MI203_amani_version_finale.ipynb
@@ -42,7 +42,7 @@
         "\n",
         "Après, on a fait une submission en utilisant seulement des données d'image, ce qui nous a apporté un score de **94,811%**.\n",
         "\n",
-        "Finalement, on a fait une réseau qui admet comme entrée les données d'image et d'audio, et cela nous a donné comme résultat **99,65%** comme score.\n",
+        "Finalement, on a fait un réseau qui admet comme entrée les données d'image et d'audio, et cela nous a donné comme résultat **99,65%** comme score.\n",
         "\n",
         "Ce Notebook montre la démarche utilisé dans le développement des modèles et leurs validation."
       ]
